Fixed error with nav, updated ids in main-sections

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -85,7 +85,7 @@ section img {
     margin-right: 25px;
 }
 
-#section-align-right {
+#online-reputation-management {
     float: right;
     margin-left: 25px;
     margin-right: 0px;
